modify config to make app work

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Deneb",
   "version": "0.0.1",
   "scripts": {
-    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "start": "concurrently \"npm run tsc:w\" \"npm run lite -c bs-config.json\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
