abandon angular2-material, use ng2-material instead

--- a/package.json
+++ b/package.json
@@ -51,16 +51,9 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular2-material/button": "^2.0.0-alpha.1",
-    "@angular2-material/card": "^2.0.0-alpha.1",
-    "@angular2-material/checkbox": "^2.0.0-alpha.1",
-    "@angular2-material/core": "^2.0.0-alpha.1",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.1",
-    "@angular2-material/radio": "^2.0.0-alpha.1",
-    "@angular2-material/sidenav": "^2.0.0-alpha.1",
-    "@angular2-material/toolbar": "^2.0.0-alpha.1",
     "angular2": "2.0.0-beta.13",
     "core-js": "^2.1.5",
+    "ng2-material": "^0.3.4",
     "rxjs": "5.0.0-beta.4",
     "zone.js": "0.6.6"
   },
@@ -77,6 +70,7 @@
     "es7-reflect-metadata": "^1.6.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.9.0",
     "http-server": "^0.9.0",
