--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "~2.0.0-beta.14",
     "core-js": "^2.1.5",
-    "ng2-material": "^0.3.4",
-    "rxjs": "5.0.0-beta.4",
-    "zone.js": "0.6.6"
+    "ng2-material": "~0.3.7",
+    "rxjs": "~5.0.0-beta.2",
+    "zone.js": "~0.6.12"
   },
   "devDependencies": {
     "angular2-hmr": "~0.5.1",
@@ -85,6 +85,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
+    "make-error": "^1.1.1",
     "node-sass": "^3.4.2",
     "parse5": "^1.3.2",
     "phantomjs-polyfill": "0.0.2",
