--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular2-webpack-starter",
-  "version": "4.0.0",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
+  "name": "Deneb",
+  "version": "0.6.0",
+  "description": "Web client for Albireo",
+  "author": "Nyasoft<about@nya.io>",
+  "homepage": "https://github.com/lordfriend/Deneb",
   "license": "MIT",
   "scripts": {
     "rimraf": "rimraf",
