--- a/package.json
+++ b/package.json
@@ -51,18 +51,18 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/forms": "^0.2.0",
-    "@angular/http": "^2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
-    "@angular/router": "^3.0.0-beta.2",
+    "@angular/common": "^2.0.1",
+    "@angular/compiler": "^2.0.1",
+    "@angular/core": "^2.0.1",
+    "@angular/forms": "^2.0.1",
+    "@angular/http": "^2.0.1",
+    "@angular/platform-browser": "^2.0.1",
+    "@angular/platform-browser-dynamic": "^2.0.1",
+    "@angular/router": "^3.0.1",
     "core-js": "^2.4.0",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "^5.0.0-beta.12",
     "semantic-ui-less": "^2.1.8",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.21"
   },
   "devDependencies": {
     "awesome-typescript-loader": "~0.16.2",
@@ -108,7 +108,7 @@
     "tslint": "^3.6.0",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.3.12",
-    "typescript": "~1.8.9",
+    "typescript": "^1.8.10",
     "typings": "^0.7.9",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
