--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.1",
-    "codelyzer": "~0.0.28",
+    "codelyzer": "~1.0.0-beta.4",
     "compression-webpack-plugin": "^0.3.1",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
