--- a/package.json
+++ b/package.json
@@ -54,20 +54,22 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/router": "3.4.1",
     "core-js": "2.4.1",
     "http-server": "0.9.0",
     "ie-shim": "0.1.0",
-    "rxjs": "5.0.0-beta.12",
+    "jasmine-core": "^2.5.2",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "5.0.2",
     "semantic-ui-less": "2.1.8",
-    "zone.js": "0.6.21"
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.33",
@@ -102,6 +104,7 @@
     "karma-webpack": "1.8.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "ng-router-loader": "^1.0.2",
     "parse5": "^1.3.2",
     "protractor": "^3.2.2",
     "raw-loader": "0.5.1",
