--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@angular/platform-browser-dynamic": "2.4.1",
     "@angular/router": "3.4.1",
     "core-js": "2.4.1",
+    "deneb-ui": "lordfriend/Deneb-UI",
     "http-server": "0.9.0",
     "ie-shim": "0.1.0",
     "jasmine-core": "^2.5.2",
