--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "homepage": "https://github.com/lordfriend/Deneb",
   "license": "MIT",
   "scripts": {
+    "build:aot:prod": "npm run clean:dist && npm run clean:aot && NODE_ENV=production webpack --config webpack.config.js --progress --profile --bail",
+    "build:aot": "npm run build:aot:prod",
     "build:prod": "NODE_ENV=production webpack --config webpack.config.js  --progress --profile --bail",
     "build": "npm run build:prod",
     "ci": "npm run lint && npm test && npm run e2e",
+    "clean:aot": "npm run rimraf -- compiled",
     "clean:dist": "npm run rimraf -- dist",
     "clean:install": "npm set progress=false && npm install",
     "clean:start": "npm start",
@@ -52,37 +55,35 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "2.4.1",
-    "@angular/compiler": "2.4.1",
-    "@angular/core": "2.4.1",
-    "@angular/forms": "2.4.1",
-    "@angular/http": "2.4.1",
-    "@angular/platform-browser": "2.4.1",
-    "@angular/platform-browser-dynamic": "2.4.1",
-    "@angular/router": "3.4.1",
-    "core-js": "2.4.1",
-    "deneb-ui": "lordfriend/Deneb-UI",
-    "http-server": "0.9.0",
+    "@angular/common": "^2.4.7",
+    "@angular/compiler": "^2.4.7",
+    "@angular/core": "^2.4.7",
+    "@angular/forms": "^2.4.7",
+    "@angular/http": "^2.4.7",
+    "@angular/platform-browser": "^2.4.7",
+    "@angular/platform-browser-dynamic": "^2.4.7",
+    "@angular/platform-server": "^2.4.7",
+    "@angular/router": "3.4.7",
+    "core-js": "^2.4.1",
     "ie-shim": "0.1.0",
-    "jasmine-core": "^2.5.2",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
     "semantic-ui-less": "^2.2.4",
     "zone.js": "0.7.4"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^2.4.7",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
-    "@types/node": "^6.0.38",
-    "@types/protractor": "^1.5.20",
-    "@types/selenium-webdriver": "2.44.29",
-    "@types/source-map": "^0.1.27",
+    "@types/node": "^7.0.0",
+    "@types/selenium-webdriver": "2.53.39",
+    "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^1.12.34",
+    "@types/webpack": "^2.0.0",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^2.2.1",
+    "awesome-typescript-loader": "~3.0.0-beta.18",
     "chalk": "^1.1.3",
-    "codelyzer": "~1.0.0-beta.4",
+    "codelyzer": "~2.0.0-beta.4",
     "compression-webpack-plugin": "^0.3.1",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
@@ -91,21 +92,24 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "http-server": "0.9.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
+    "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
+    "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
+    "karma-webpack": "2.0.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "ng-router-loader": "^1.0.2",
-    "parse5": "^1.3.2",
+    "ng-router-loader": "^2.1.0",
+    "ngc-webpack": "^1.2.0",
+    "parse5": "^3.0.1",
     "protractor": "^3.2.2",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.2",
@@ -114,18 +118,17 @@
     "string-replace-loader": "^1.0.5",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
-    "ts-helpers": "1.1.2",
     "ts-node": "^1.7.0",
-    "tslint": "~3.15.1",
-    "tslint-loader": "^2.1.5",
-    "typedoc": "^0.4.5",
-    "typescript": "2.1.1",
+    "tslib": "^1.5.0",
+    "tslint": "~4.4.2",
+    "tslint-loader": "^3.3.0",
+    "typedoc": "^0.5.3",
+    "typescript": "~2.1.6",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.0-rc.3",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.2.0-rc.0",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "~2.3.1"
+    "webpack": "2.2.0",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "2.3.0",
+    "webpack-merge": "~2.6.1"
   },
   "repository": {
     "type": "git",
