--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,23 +5,25 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
     "noEmitHelpers": true,
+    "noEmit": true,
+    "importHelpers": true,
     "strictNullChecks": false,
-    "baseUrl": "./src",
     "paths": {
     },
     "lib": [
       "dom",
       "es6"
     ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "types": [
       "hammerjs",
       "jasmine",
       "node",
-      "protractor",
-      "selenium-webdriver",
       "source-map",
       "uglify-js",
       "webpack"
