--- a/package.json
+++ b/package.json
@@ -55,24 +55,25 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "^2.4.7",
-    "@angular/compiler": "^2.4.7",
-    "@angular/core": "^2.4.7",
-    "@angular/forms": "^2.4.7",
-    "@angular/http": "^2.4.7",
-    "@angular/platform-browser": "^2.4.7",
-    "@angular/platform-browser-dynamic": "^2.4.7",
-    "@angular/platform-server": "^2.4.7",
-    "@angular/router": "3.4.7",
+    "@angular/animations": "^4.0.1",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "core-js": "^2.4.1",
     "ie-shim": "0.1.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
     "semantic-ui-less": "^2.2.4",
-    "zone.js": "0.7.4"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.7",
+    "@angular/compiler-cli": "^4.0.1",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^7.0.0",
