add deneb-ui refactor list-bangumi

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,11 +6,13 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 2
 end_of_line = lf
+
+[*.{ts,js}]
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
-insert_final_newline = false
-trim_trailing_whitespace = false
+[*.{yml,json}]
+indent_size = 4
+trim_trailing_whitespace = true
