--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@angular/platform-server": "^4.0.1",
     "@angular/router": "^4.0.1",
     "core-js": "^2.4.1",
-    "deneb-ui": "^0.2.0",
+    "deneb-ui": "^0.2.2",
     "ie-shim": "0.1.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.0.1",
+    "@angular/language-service": "^4.0.2",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^7.0.0",
