--- a/package.json
+++ b/package.json
@@ -128,9 +128,9 @@
     "typedoc": "^0.5.3",
     "typescript": "^2.2.2",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.0",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "2.3.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
     "webpack-merge": "~2.6.1"
   },
   "repository": {
