--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
     "semantic-ui-less": "^2.2.4",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
