--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "webdriver:start": "npm run webdriver-manager start",
     "webdriver:update": "npm run webdriver-manager update",
     "webpack-dev-server": "webpack-dev-server",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "postinstall": "node scripts/font-fix.js"
   },
   "dependencies": {
     "@angular/animations": "^4.0.1",
@@ -93,7 +94,7 @@
     "css-loader": "^0.26.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "http-server": "0.9.0",
@@ -117,7 +118,7 @@
     "protractor": "^3.2.2",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.2",
-    "semantic-ui-less-module-loader": "^0.1.5",
+    "semantic-ui-less-module-loader": "^1.0.0",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "^1.0.5",
     "style-loader": "^0.13.1",
