--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "hammerjs": "^2.0.8",
     "ie-shim": "0.1.0",
     "intersection-observer": "^0.3.2",
+    "moment": "^2.19.3",
+    "ng2-date-picker": "^2.6.2",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
     "semantic-ui-less": "^2.2.4",
