--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,21 +12,11 @@
     "importHelpers": true,
     "strictNullChecks": false,
     "paths": {
+      "*": ["node_modules/@types"]
     },
     "lib": [
       "dom",
       "es2015"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "hammerjs",
-      "jasmine",
-      "node",
-      "source-map",
-      "uglify-js",
-      "webpack"
     ]
   },
   "exclude": [
