--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -15,19 +15,9 @@
       "es2015",
       "dom"
     ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "hammerjs",
-      "jasmine",
-      "node",
-      "source-map",
-      "uglify-js",
-      "webpack"
-    ],
-    "paths": [
-    ],
+    "paths": {
+      "*": ["node_modules/@types"]
+    },
     "baseUrl": "src"
   },
   "exclude": [
