--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "deneb-ui": "^0.7.2",
     "hammerjs": "^2.0.8",
     "ie-shim": "0.1.0",
-    "intersection-observer": "^0.3.2",
+    "intersection-observer": "^0.5.0",
     "moment": "^2.19.3",
     "ng2-date-picker": "^2.6.2",
     "reflect-metadata": "^0.1.9",
@@ -131,7 +131,7 @@
     "tslib": "^1.5.0",
     "tslint": "^5.0.0-dev.0",
     "tslint-loader": "^3.3.0",
-    "typescript": "^2.2.2",
+    "typescript": "2.2.2",
     "url-loader": "^0.5.7",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.12.0",
