--- a/package.json
+++ b/package.json
@@ -65,12 +65,13 @@
     "@angular/platform-server": "^4.0.1",
     "@angular/router": "^4.0.1",
     "core-js": "^2.4.1",
-    "deneb-ui": "^0.7.2",
+    "deneb-ui": "^0.9.0",
     "hammerjs": "^2.0.8",
     "ie-shim": "0.1.0",
     "intersection-observer": "^0.5.0",
     "moment": "^2.19.3",
     "ng2-date-picker": "^2.6.2",
+    "popper.js": "^1.12.9",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
     "semantic-ui-less": "^2.2.4",
