--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Deneb",
-  "version": "3.2.1",
+  "version": "3.2.3",
   "description": "Web client for Albireo",
   "author": "Nyasoft<about@nya.io>",
   "homepage": "https://github.com/lordfriend/Deneb",
@@ -66,6 +66,7 @@
     "@angular/router": "^4.0.1",
     "core-js": "^2.4.1",
     "deneb-ui": "^0.9.0",
+    "downloadjs": "^1.4.7",
     "hammerjs": "^2.0.8",
     "ie-shim": "0.1.0",
     "intersection-observer": "^0.5.0",
@@ -83,6 +84,7 @@
     "@angular/compiler-cli": "^4.0.1",
     "@angular/language-service": "^5.2.1",
     "@types/chrome": "^0.0.58",
+    "@types/downloadjs": "^1.4.0",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
     "@types/node": "^7.0.0",
