--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Deneb",
-  "version": "3.5.1",
+  "version": "4.0.0",
   "description": "Web client for Albireo",
   "author": "Nyasoft<about@nya.io>",
   "homepage": "https://github.com/lordfriend/Deneb",
@@ -10,27 +10,15 @@
     "build:aot": "npm run build:aot:prod",
     "build:prod": "NODE_ENV=production webpack --config webpack.config.js  --progress --profile --bail",
     "build": "npm run build:prod",
-    "ci": "npm run lint && npm test && npm run e2e",
     "clean:aot": "npm run rimraf -- compiled",
     "clean:dist": "npm run rimraf -- dist",
     "clean:install": "npm set progress=false && npm install",
     "clean:start": "npm start",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
-    "docker": "docker",
-    "e2e:live": "npm run e2e -- --elementExplorer",
-    "e2e": "npm run protractor",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
-    "github-deploy": "npm run github-deploy:dev",
-    "lint": "npm run tslint \"src/**/*.ts\"",
-    "postversion": "git push && git push --tags",
     "prebuild:dev": "npm run clean:dist",
     "prebuild:prod": "npm run clean:dist",
     "preclean:install": "npm run clean",
     "preclean:start": "npm run clean",
-    "pree2e": "npm run webdriver:update -- --standalone",
-    "preversion": "npm test",
-    "protractor": "protractor",
     "rimraf": "rimraf",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "NODE_ENV=development webpack-dev-server --config webpack.config.js --progress --profile --watch --content-base src/",
@@ -54,17 +42,18 @@
     "postinstall": "node scripts/font-fix.js"
   },
   "dependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "core-js": "^2.4.1",
+    "@angular/animations": "~7.2",
+    "@angular/common": "~7.2",
+    "@angular/compiler": "~7.2",
+    "@angular/compiler-cli": "~7.2",
+    "@angular/core": "~7.2",
+    "@angular/forms": "~7.2",
+    "@angular/http": "~7.2",
+    "@angular/platform-browser": "~7.2",
+    "@angular/platform-browser-dynamic": "~7.2",
+    "@angular/platform-server": "~7.2",
+    "@angular/router": "~7.2",
+    "core-js": "~2.6",
     "deneb-ui": "^0.10.0",
     "downloadjs": "^1.4.7",
     "hammerjs": "^2.0.8",
@@ -74,73 +63,54 @@
     "ng2-date-picker": "^2.6.2",
     "popper.js": "^1.12.9",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.0.2",
+    "rxjs": "5.*",
     "semantic-ui-less": "^2.2.4",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "web-animations-js": "^2.2.5",
-    "zone.js": "^0.8.5"
+    "zone.js": "~0.8"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/language-service": "^5.2.1",
+    "@ngtools/webpack": "~7.3",
     "@types/chrome": "^0.0.58",
+    "@types/core-js": "~2.5",
     "@types/downloadjs": "^1.4.0",
     "@types/hammerjs": "^2.0.33",
-    "@types/jasmine": "^2.2.34",
-    "@types/node": "^7.0.0",
-    "@types/selenium-webdriver": "2.53.39",
+    "@types/node": "~10.12",
     "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^2.0.0",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.2.0-rc.0",
+    "angular-router-loader": "~0.8",
+    "angular2-template-loader": "~0.6",
     "chalk": "^1.1.3",
-    "codelyzer": "^2.1.1",
-    "compression-webpack-plugin": "^0.3.1",
+    "clean-webpack-plugin": "~0.1",
     "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.26.0",
+    "cross-env": "~5.2",
+    "css-loader": "~1.0",
+    "cssnano": "~4.1",
+    "del-cli": "~1.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.30.1",
-    "http-server": "0.9.0",
+    "file-loader": "^4.0.0",
+    "html-webpack-plugin": "~3.2",
     "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
-    "karma": "^1.4.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-remap-coverage": "^0.1.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.5",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "ng-router-loader": "^2.1.0",
-    "ngc-webpack": "^3.2.2",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "~5.0",
     "parse5": "^3.0.1",
-    "protractor": "^3.2.2",
-    "raw-loader": "0.5.1",
+    "raw-loader": "^3.0.0",
     "rimraf": "^2.5.2",
     "semantic-ui-less-module-loader": "^1.0.0",
     "source-map-loader": "^0.1.5",
-    "string-replace-loader": "^1.3.0",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.4",
-    "ts-node": "^1.7.0",
-    "tslib": "^1.5.0",
-    "tslint": "^5.0.0-dev.0",
-    "tslint-loader": "^3.3.0",
-    "typescript": "2.2.2",
+    "style-loader": "~0.23",
+    "ts-loader": "^6.0.2",
+    "tslib": "^1.10.0",
+    "typescript": "~3.1",
+    "uglifyjs-webpack-plugin": "~2.1",
     "url-loader": "^0.5.7",
-    "webpack": "^3.7.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.9.2",
-    "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
-    "webpack-merge": "^4.1.0"
+    "webpack": "~4.29",
+    "webpack-cli": "~3.2",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "~4.2"
   },
   "repository": {
     "type": "git",
