--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "ng2-date-picker": "^2.6.2",
     "popper.js": "^1.12.9",
     "reflect-metadata": "^0.1.9",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "semantic-ui-less": "^2.2.4",
     "web-animations-js": "^2.2.5",
     "zone.js": "~0.8"
@@ -80,14 +82,15 @@
     "angular2-template-loader": "~0.6",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "~0.1",
-    "copy-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^5.0.3",
     "cross-env": "~5.2",
-    "css-loader": "~1.0",
+    "css-loader": "^3.0.0",
     "cssnano": "~4.1",
     "del-cli": "~1.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^4.0.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "~3.2",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
@@ -98,10 +101,10 @@
     "parse5": "^3.0.1",
     "raw-loader": "^3.0.0",
     "rimraf": "^2.5.2",
-    "rxjs": "6",
     "semantic-ui-less-module-loader": "^1.0.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "~0.23",
+    "to-string-loader": "^1.1.5",
     "ts-loader": "^6.0.2",
     "tslib": "^1.10.0",
     "typescript": "~3.1",
@@ -109,7 +112,7 @@
     "url-loader": "^0.5.7",
     "webpack": "~4.29",
     "webpack-cli": "~3.2",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.7.1",
     "webpack-merge": "~4.2"
   },
   "repository": {
