--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@angular/platform-server": "~7.2",
     "@angular/router": "~7.2",
     "core-js": "~2.6",
-    "deneb-ui": "^0.10.0",
+    "deneb-ui": "^1.0.0",
     "downloadjs": "^1.4.7",
     "hammerjs": "^2.0.8",
     "ie-shim": "0.1.0",
@@ -64,8 +64,8 @@
     "popper.js": "^1.12.9",
     "reflect-metadata": "^0.1.9",
     "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.2",
     "semantic-ui-less": "^2.2.4",
+    "url-polyfill": "^1.1.5",
     "web-animations-js": "^2.2.5",
     "zone.js": "~0.8"
   },
