--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
   "devDependencies": {
     "@ngtools/webpack": "~7.3",
     "@types/chrome": "^0.0.58",
-    "@types/core-js": "~2.5",
     "@types/downloadjs": "^1.4.0",
     "@types/hammerjs": "^2.0.33",
     "@types/node": "~10.12",
@@ -90,6 +89,7 @@
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "~3.2",
     "imports-loader": "^0.6.5",
