update Angular 8.1.2, update code to make sure it compatible with new version

--- a/package.json
+++ b/package.json
@@ -42,17 +42,16 @@
     "postinstall": "node scripts/font-fix.js"
   },
   "dependencies": {
-    "@angular/animations": "~7.2",
-    "@angular/common": "~7.2",
-    "@angular/compiler": "~7.2",
-    "@angular/compiler-cli": "~7.2",
-    "@angular/core": "~7.2",
-    "@angular/forms": "~7.2",
-    "@angular/http": "~7.2",
-    "@angular/platform-browser": "~7.2",
-    "@angular/platform-browser-dynamic": "~7.2",
-    "@angular/platform-server": "~7.2",
-    "@angular/router": "~7.2",
+    "@angular/animations": "8.1.2",
+    "@angular/common": "8.1.2",
+    "@angular/compiler": "8.1.2",
+    "@angular/compiler-cli": "8.1.2",
+    "@angular/core": "8.1.2",
+    "@angular/forms": "8.1.2",
+    "@angular/platform-browser": "8.1.2",
+    "@angular/platform-browser-dynamic": "8.1.2",
+    "@angular/platform-server": "8.1.2",
+    "@angular/router": "8.1.2",
     "core-js": "~2.6",
     "deneb-ui": "^1.0.0",
     "downloadjs": "^1.4.7",
@@ -67,10 +66,10 @@
     "semantic-ui-less": "^2.2.4",
     "url-polyfill": "^1.1.5",
     "web-animations-js": "^2.2.5",
-    "zone.js": "~0.8"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@ngtools/webpack": "~7.3",
+    "@ngtools/webpack": "8.1.2",
     "@types/chrome": "^0.0.58",
     "@types/downloadjs": "^1.4.0",
     "@types/hammerjs": "^2.0.33",
@@ -107,7 +106,7 @@
     "to-string-loader": "^1.1.5",
     "ts-loader": "^6.0.2",
     "tslib": "^1.10.0",
-    "typescript": "~3.1",
+    "typescript": "~3.4",
     "uglifyjs-webpack-plugin": "~2.1",
     "url-loader": "^0.5.7",
     "webpack": "~4.29",
