--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-optimizer": "^0.801.2",
     "@ngtools/webpack": "8.1.2",
     "@types/chrome": "^0.0.58",
     "@types/downloadjs": "^1.4.0",
@@ -80,6 +81,7 @@
     "angular2-template-loader": "~0.6",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "~0.1",
+    "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "~5.2",
     "css-loader": "^3.0.0",
