- default support target is es2015 - fix bugs in production build, replace UglifyJS webpack plugin with Teser webpack plugin.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ config/dev.proxy.js
 src/assets/img/background.jpg
 src/assets/img/background.png
 src/assets/css/login.css
+
+# bundle report #
+/report
