--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "homepage": "https://github.com/lordfriend/Deneb",
   "license": "MIT",
   "scripts": {
-    "build:aot:prod": "npm run clean:dist && npm run clean:aot && NODE_ENV=production webpack --config webpack.config.js --progress --profile --bail",
+    "build:aot:prod": "npm run clean:dist && npm run clean:aot && cross-env BUILD_AOT=1 NODE_ENV=production webpack --config webpack.config.js --progress --profile --bail",
     "build:aot": "npm run build:aot:prod",
-    "build:prod": "NODE_ENV=production webpack --config webpack.config.js  --progress --profile --bail",
+    "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js  --progress --profile --bail",
     "build": "npm run build:prod",
     "clean:aot": "npm run rimraf -- compiled",
     "clean:dist": "npm run rimraf -- dist",
@@ -21,9 +21,8 @@
     "preclean:start": "npm run clean",
     "rimraf": "rimraf",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:dev": "NODE_ENV=development webpack-dev-server --config webpack.config.js --progress --profile --watch --content-base src/",
-    "server:prod": "http-server dist --cors",
-    "server": "npm run server:dev",
+    "server:dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --progress --profile --watch --content-base src/",
+    "server:aot:dev": "cross-env BUILD_AOT=1 npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
     "test": "karma start",
@@ -42,16 +41,16 @@
     "postinstall": "node scripts/font-fix.js"
   },
   "dependencies": {
-    "@angular/animations": "8.1.2",
-    "@angular/common": "8.1.2",
-    "@angular/compiler": "8.1.2",
-    "@angular/compiler-cli": "8.1.2",
-    "@angular/core": "8.1.2",
-    "@angular/forms": "8.1.2",
-    "@angular/platform-browser": "8.1.2",
-    "@angular/platform-browser-dynamic": "8.1.2",
-    "@angular/platform-server": "8.1.2",
-    "@angular/router": "8.1.2",
+    "@angular/animations": "~8.0.0",
+    "@angular/common": "~8.0.0",
+    "@angular/compiler": "~8.0.0",
+    "@angular/compiler-cli": "~8.0.0",
+    "@angular/core": "~8.0.0",
+    "@angular/forms": "~8.0.0",
+    "@angular/platform-browser": "~8.0.0",
+    "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/platform-server": "~8.0.0",
+    "@angular/router": "~8.0.0",
     "core-js": "~2.6",
     "deneb-ui": "^1.0.0",
     "downloadjs": "^1.4.7",
@@ -70,7 +69,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-optimizer": "^0.801.2",
-    "@ngtools/webpack": "8.1.2",
+    "@ngtools/webpack": "~8.0.0",
     "@types/chrome": "^0.0.58",
     "@types/downloadjs": "^1.4.0",
     "@types/hammerjs": "^2.0.33",
@@ -83,7 +82,7 @@
     "clean-webpack-plugin": "~0.1",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
-    "cross-env": "~5.2",
+    "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "~4.1",
     "del-cli": "~1.1",
@@ -105,13 +104,15 @@
     "semantic-ui-less-module-loader": "^1.0.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "~0.23",
+    "terser-webpack-plugin": "^1.3.0",
     "to-string-loader": "^1.1.5",
     "ts-loader": "^6.0.2",
     "tslib": "^1.10.0",
     "typescript": "~3.4",
-    "uglifyjs-webpack-plugin": "~2.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^0.5.7",
     "webpack": "~4.29",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "~3.2",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.7.1",
@@ -127,5 +128,13 @@
   "engines": {
     "node": ">= 4.2.1",
     "npm": ">= 3"
-  }
+  },
+  "sideEffects": [
+    "./src/polyfills.browser.ts",
+    "./src/main.browser.ts",
+    "./src/assets/semantic-ui.ts",
+    "./node_modules/semantic-ui-less/semantic.less",
+    "./src/app/app.less",
+    "*.css"
+  ]
 }
