--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -14,13 +14,14 @@
       "es2018",
       "dom"
     ],
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
   },
   "exclude": [
     "node_modules",
     "dist",
     "src/**/*.spec.ts",
-    "src/**/*.e2e.ts"
+    "src/**/*.e2e.ts",
+    "src/service-worker"
   ],
   "angularCompilerOptions": {
     "skipMetadataEmit": true
