--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/service-worker"
   ],
   "angularCompilerOptions": {
     "skipMetadataEmit": true
