--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Deneb",
-  "version": "4.0.5",
+  "version": "4.0.7",
   "description": "Web client for Albireo",
   "author": "Nyasoft<about@nya.io>",
   "homepage": "https://github.com/lordfriend/Deneb",
@@ -127,6 +127,7 @@
   "sideEffects": [
     "./src/polyfills.browser.ts",
     "./src/main.browser.ts",
+    "./src/app/environment.ts",
     "./src/assets/semantic-ui.ts",
     "./node_modules/semantic-ui-less/semantic.less",
     "./src/app/app.less",
